Revert "fix overflow"
This reverts commit d41679f3bc8587e5ab059676d33d6863328b9204.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -337,7 +337,7 @@ height: 0;
 }
 
 .mobile-nav.mobile-nav.is-active {
-  padding-top: 105px;
+  padding-top: 25px;
   padding-left: 15px;
   display: block;
 }
